[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/tilesets/main_tileset.tres" type="TileSet" id=1]
[ext_resource path="res://Scripts/MainScene.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Campfire.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Enviroment.gd" type="Script" id=5]

[node name="Room" type="Node2D"]
script = ExtResource( 3 )

[node name="Enviroment" type="Node2D" parent="."]
light_mask = 2
script = ExtResource( 5 )

[node name="GroundWall" type="TileMap" parent="Enviroment"]
light_mask = 2
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
occluder_light_mask = 4
format = 1
tile_data = PoolIntArray( 0, 30, 0, 1, 4, 0, 2, 4, 0, 3, 4, 0, 4, 4, 0, 5, 4, 0, 6, 4, 0, 7, 4, 0, 8, 4, 0, 9, 4, 0, 10, 4, 0, 11, 4, 0, 12, 4, 0, 13, 4, 0, 14, 4, 0, 15, 4, 0, 16, 4, 0, 17, 4, 0, 18, 4, 0, 19, 4, 0, 20, 4, 0, 21, 4, 0, 22, 4, 0, 23, 4, 0, 24, 4, 0, 25, 4, 0, 26, 4, 0, 27, 4, 0, 28, 4, 0, 29, 4, 0, 30, 4, 0, 31, 4, 0, 32, 4, 0, 33, 4, 0, 34, 4, 0, 35, 4, 0, 36, 4, 0, 37, 31, 0, 65536, 20, 0, 65537, 42, 0, 65538, 42, 0, 65539, 42, 0, 65540, 42, 0, 65541, 42, 0, 65542, 42, 0, 65543, 42, 0, 65544, 42, 0, 65545, 42, 0, 65546, 42, 0, 65547, 42, 0, 65548, 42, 0, 65549, 42, 0, 65550, 42, 0, 65551, 42, 0, 65552, 42, 0, 65553, 42, 0, 65554, 42, 0, 65555, 42, 0, 65556, 42, 0, 65557, 42, 0, 65558, 42, 0, 65559, 42, 0, 65560, 42, 0, 65561, 42, 0, 65562, 42, 0, 65563, 42, 0, 65564, 42, 0, 65565, 42, 0, 65566, 42, 0, 65567, 42, 0, 65568, 42, 0, 65569, 42, 0, 65570, 42, 0, 65571, 42, 0, 65572, 42, 0, 65573, 24, 0, 131072, 20, 0, 131073, 42, 0, 131074, 42, 0, 131075, 42, 0, 131076, 42, 0, 131077, 42, 0, 131078, 42, 0, 131079, 42, 0, 131080, 42, 0, 131081, 42, 0, 131082, 42, 0, 131083, 42, 0, 131084, 42, 0, 131085, 42, 0, 131086, 42, 0, 131087, 42, 0, 131088, 42, 0, 131089, 42, 0, 131090, 42, 0, 131091, 42, 0, 131092, 42, 0, 131093, 42, 0, 131094, 42, 0, 131095, 42, 0, 131096, 42, 0, 131097, 42, 0, 131098, 42, 0, 131099, 42, 0, 131100, 42, 0, 131101, 42, 0, 131102, 42, 0, 131103, 42, 0, 131104, 42, 0, 131105, 42, 0, 131106, 42, 0, 131107, 42, 0, 131108, 42, 0, 131109, 24, 0, 196608, 20, 0, 196609, 42, 0, 196610, 42, 0, 196611, 42, 0, 196612, 42, 0, 196613, 42, 0, 196614, 42, 0, 196615, 42, 0, 196616, 42, 0, 196617, 42, 0, 196618, 42, 0, 196619, 42, 0, 196620, 42, 0, 196621, 42, 0, 196622, 42, 0, 196623, 42, 0, 196624, 42, 0, 196625, 42, 0, 196626, 42, 0, 196627, 42, 0, 196628, 42, 0, 196629, 42, 0, 196630, 42, 0, 196631, 42, 0, 196632, 42, 0, 196633, 42, 0, 196634, 42, 0, 196635, 42, 0, 196636, 42, 0, 196637, 42, 0, 196638, 42, 0, 196639, 42, 0, 196640, 42, 0, 196641, 42, 0, 196642, 42, 0, 196643, 42, 0, 196644, 42, 0, 196645, 24, 0, 262144, 20, 0, 262145, 42, 0, 262146, 42, 0, 262147, 42, 0, 262148, 42, 0, 262149, 42, 0, 262150, 42, 0, 262151, 42, 0, 262152, 42, 0, 262153, 42, 0, 262154, 42, 0, 262155, 42, 0, 262156, 42, 0, 262157, 42, 0, 262158, 42, 0, 262159, 42, 0, 262160, 42, 0, 262161, 42, 0, 262162, 42, 0, 262163, 42, 0, 262164, 42, 0, 262165, 42, 0, 262166, 42, 0, 262167, 42, 0, 262168, 42, 0, 262169, 42, 0, 262170, 42, 0, 262171, 42, 0, 262172, 42, 0, 262173, 42, 0, 262174, 42, 0, 262175, 42, 0, 262176, 42, 0, 262177, 42, 0, 262178, 42, 0, 262179, 42, 0, 262180, 42, 0, 262181, 24, 0, 327680, 20, 0, 327681, 42, 0, 327682, 42, 0, 327683, 42, 0, 327684, 42, 0, 327685, 42, 0, 327686, 42, 0, 327687, 42, 0, 327688, 42, 0, 327689, 42, 0, 327690, 42, 0, 327691, 42, 0, 327692, 42, 0, 327693, 42, 0, 327694, 42, 0, 327695, 42, 0, 327696, 42, 0, 327697, 42, 0, 327698, 42, 0, 327699, 42, 0, 327700, 42, 0, 327701, 42, 0, 327702, 42, 0, 327703, 42, 0, 327704, 42, 0, 327705, 42, 0, 327706, 42, 0, 327707, 42, 0, 327708, 42, 0, 327709, 42, 0, 327710, 42, 0, 327711, 42, 0, 327712, 42, 0, 327713, 42, 0, 327714, 42, 0, 327715, 42, 0, 327716, 42, 0, 327717, 24, 0, 393216, 20, 0, 393217, 42, 0, 393218, 42, 0, 393219, 42, 0, 393220, 42, 0, 393221, 42, 0, 393222, 42, 0, 393223, 42, 0, 393224, 42, 0, 393225, 42, 0, 393226, 42, 0, 393227, 42, 0, 393228, 42, 0, 393229, 42, 0, 393230, 42, 0, 393231, 42, 0, 393232, 42, 0, 393233, 42, 0, 393234, 42, 0, 393235, 42, 0, 393236, 42, 0, 393237, 42, 0, 393238, 42, 0, 393239, 42, 0, 393240, 42, 0, 393241, 42, 0, 393242, 42, 0, 393243, 42, 0, 393244, 42, 0, 393245, 42, 0, 393246, 42, 0, 393247, 42, 0, 393248, 42, 0, 393249, 42, 0, 393250, 42, 0, 393251, 42, 0, 393252, 42, 0, 393253, 24, 0, 458752, 20, 0, 458753, 42, 0, 458754, 42, 0, 458755, 42, 0, 458756, 42, 0, 458757, 42, 0, 458758, 42, 0, 458759, 42, 0, 458760, 42, 0, 458761, 42, 0, 458762, 42, 0, 458763, 42, 0, 458764, 42, 0, 458765, 42, 0, 458766, 42, 0, 458767, 42, 0, 458768, 42, 0, 458769, 42, 0, 458770, 42, 0, 458771, 42, 0, 458772, 42, 0, 458773, 42, 0, 458774, 42, 0, 458775, 42, 0, 458776, 42, 0, 458777, 42, 0, 458778, 42, 0, 458779, 42, 0, 458780, 42, 0, 458781, 42, 0, 458782, 42, 0, 458783, 42, 0, 458784, 42, 0, 458785, 42, 0, 458786, 42, 0, 458787, 42, 0, 458788, 42, 0, 458789, 24, 0, 524288, 20, 0, 524289, 42, 0, 524290, 42, 0, 524291, 42, 0, 524292, 42, 0, 524293, 42, 0, 524294, 42, 0, 524295, 42, 0, 524296, 42, 0, 524297, 42, 0, 524298, 42, 0, 524299, 42, 0, 524300, 42, 0, 524301, 42, 0, 524302, 42, 0, 524303, 42, 0, 524304, 42, 0, 524305, 42, 0, 524306, 42, 0, 524307, 42, 0, 524308, 42, 0, 524309, 42, 0, 524310, 42, 0, 524311, 42, 0, 524312, 42, 0, 524313, 42, 0, 524314, 42, 0, 524315, 42, 0, 524316, 42, 0, 524317, 42, 0, 524318, 42, 0, 524319, 42, 0, 524320, 42, 0, 524321, 42, 0, 524322, 42, 0, 524323, 42, 0, 524324, 42, 0, 524325, 24, 0, 589824, 20, 0, 589825, 42, 0, 589826, 42, 0, 589827, 42, 0, 589828, 42, 0, 589829, 42, 0, 589830, 42, 0, 589831, 42, 0, 589832, 42, 0, 589833, 42, 0, 589834, 42, 0, 589835, 42, 0, 589836, 42, 0, 589837, 42, 0, 589838, 42, 0, 589839, 42, 0, 589840, 42, 0, 589841, 42, 0, 589842, 42, 0, 589843, 42, 0, 589844, 42, 0, 589845, 42, 0, 589846, 42, 0, 589847, 42, 0, 589848, 42, 0, 589849, 42, 0, 589850, 42, 0, 589851, 42, 0, 589852, 42, 0, 589853, 42, 0, 589854, 42, 0, 589855, 42, 0, 589856, 42, 0, 589857, 42, 0, 589858, 42, 0, 589859, 42, 0, 589860, 42, 0, 589861, 24, 0, 655360, 20, 0, 655361, 42, 0, 655362, 42, 0, 655363, 42, 0, 655364, 42, 0, 655365, 42, 0, 655366, 42, 0, 655367, 42, 0, 655368, 42, 0, 655369, 42, 0, 655370, 42, 0, 655371, 42, 0, 655372, 42, 0, 655373, 42, 0, 655374, 42, 0, 655375, 42, 0, 655376, 42, 0, 655377, 42, 0, 655378, 42, 0, 655379, 42, 0, 655380, 42, 0, 655381, 42, 0, 655382, 42, 0, 655383, 42, 0, 655384, 42, 0, 655385, 42, 0, 655386, 42, 0, 655387, 42, 0, 655388, 42, 0, 655389, 42, 0, 655390, 42, 0, 655391, 42, 0, 655392, 42, 0, 655393, 42, 0, 655394, 42, 0, 655395, 42, 0, 655396, 42, 0, 655397, 24, 0, 720896, 20, 0, 720897, 42, 0, 720898, 42, 0, 720899, 42, 0, 720900, 42, 0, 720901, 42, 0, 720902, 42, 0, 720903, 42, 0, 720904, 42, 0, 720905, 42, 0, 720906, 42, 0, 720907, 42, 0, 720908, 42, 0, 720909, 42, 0, 720910, 42, 0, 720911, 42, 0, 720912, 42, 0, 720913, 42, 0, 720914, 42, 0, 720915, 42, 0, 720916, 42, 0, 720917, 42, 0, 720918, 42, 0, 720919, 42, 0, 720920, 42, 0, 720921, 42, 0, 720922, 42, 0, 720923, 42, 0, 720924, 42, 0, 720925, 42, 0, 720926, 42, 0, 720927, 42, 0, 720928, 42, 0, 720929, 42, 0, 720930, 42, 0, 720931, 42, 0, 720932, 42, 0, 720933, 24, 0, 786432, 20, 0, 786433, 42, 0, 786434, 42, 0, 786435, 42, 0, 786436, 42, 0, 786437, 42, 0, 786438, 42, 0, 786439, 42, 0, 786440, 42, 0, 786441, 42, 0, 786442, 42, 0, 786443, 42, 0, 786444, 42, 0, 786445, 42, 0, 786446, 42, 0, 786447, 42, 0, 786448, 42, 0, 786449, 42, 0, 786450, 42, 0, 786451, 42, 0, 786452, 42, 0, 786453, 42, 0, 786454, 42, 0, 786455, 42, 0, 786456, 42, 0, 786457, 42, 0, 786458, 42, 0, 786459, 42, 0, 786460, 42, 0, 786461, 42, 0, 786462, 42, 0, 786463, 42, 0, 786464, 42, 0, 786465, 42, 0, 786466, 42, 0, 786467, 42, 0, 786468, 42, 0, 786469, 24, 0, 851968, 20, 0, 851969, 42, 0, 851970, 42, 0, 851971, 42, 0, 851972, 42, 0, 851973, 42, 0, 851974, 42, 0, 851975, 42, 0, 851976, 42, 0, 851977, 42, 0, 851978, 42, 0, 851979, 42, 0, 851980, 42, 0, 851981, 42, 0, 851982, 42, 0, 851983, 42, 0, 851984, 42, 0, 851985, 42, 0, 851986, 42, 0, 851987, 42, 0, 851988, 42, 0, 851989, 42, 0, 851990, 42, 0, 851991, 42, 0, 851992, 42, 0, 851993, 42, 0, 851994, 42, 0, 851995, 42, 0, 851996, 42, 0, 851997, 42, 0, 851998, 42, 0, 851999, 42, 0, 852000, 42, 0, 852001, 42, 0, 852002, 42, 0, 852003, 42, 0, 852004, 42, 0, 852005, 24, 0, 917504, 20, 0, 917505, 42, 0, 917506, 42, 0, 917507, 42, 0, 917508, 42, 0, 917509, 42, 0, 917510, 42, 0, 917511, 42, 0, 917512, 42, 0, 917513, 42, 0, 917514, 42, 0, 917515, 42, 0, 917516, 42, 0, 917517, 42, 0, 917518, 42, 0, 917519, 42, 0, 917520, 42, 0, 917521, 42, 0, 917522, 42, 0, 917523, 42, 0, 917524, 42, 0, 917525, 42, 0, 917526, 42, 0, 917527, 42, 0, 917528, 42, 0, 917529, 42, 0, 917530, 42, 0, 917531, 42, 0, 917532, 42, 0, 917533, 42, 0, 917534, 42, 0, 917535, 42, 0, 917536, 42, 0, 917537, 42, 0, 917538, 42, 0, 917539, 42, 0, 917540, 42, 0, 917541, 24, 0, 983040, 20, 0, 983041, 42, 0, 983042, 42, 0, 983043, 42, 0, 983044, 42, 0, 983045, 42, 0, 983046, 42, 0, 983047, 42, 0, 983048, 42, 0, 983049, 42, 0, 983050, 42, 0, 983051, 42, 0, 983052, 42, 0, 983053, 42, 0, 983054, 42, 0, 983055, 42, 0, 983056, 42, 0, 983057, 42, 0, 983058, 42, 0, 983059, 42, 0, 983060, 42, 0, 983061, 42, 0, 983062, 42, 0, 983063, 42, 0, 983064, 42, 0, 983065, 42, 0, 983066, 42, 0, 983067, 42, 0, 983068, 42, 0, 983069, 42, 0, 983070, 42, 0, 983071, 42, 0, 983072, 42, 0, 983073, 42, 0, 983074, 42, 0, 983075, 42, 0, 983076, 42, 0, 983077, 24, 0, 1048576, 20, 0, 1048577, 42, 0, 1048578, 42, 0, 1048579, 42, 0, 1048580, 42, 0, 1048581, 42, 0, 1048582, 42, 0, 1048583, 42, 0, 1048584, 42, 0, 1048585, 42, 0, 1048586, 42, 0, 1048587, 42, 0, 1048588, 42, 0, 1048589, 42, 0, 1048590, 42, 0, 1048591, 42, 0, 1048592, 42, 0, 1048593, 42, 0, 1048594, 42, 0, 1048595, 42, 0, 1048596, 42, 0, 1048597, 42, 0, 1048598, 42, 0, 1048599, 42, 0, 1048600, 42, 0, 1048601, 42, 0, 1048602, 42, 0, 1048603, 42, 0, 1048604, 42, 0, 1048605, 42, 0, 1048606, 42, 0, 1048607, 42, 0, 1048608, 42, 0, 1048609, 42, 0, 1048610, 42, 0, 1048611, 42, 0, 1048612, 42, 0, 1048613, 24, 0, 1114112, 20, 0, 1114113, 42, 0, 1114114, 42, 0, 1114115, 42, 0, 1114116, 42, 0, 1114117, 42, 0, 1114118, 42, 0, 1114119, 42, 0, 1114120, 42, 0, 1114121, 42, 0, 1114122, 42, 0, 1114123, 42, 0, 1114124, 42, 0, 1114125, 42, 0, 1114126, 42, 0, 1114127, 42, 0, 1114128, 42, 0, 1114129, 42, 0, 1114130, 42, 0, 1114131, 42, 0, 1114132, 42, 0, 1114133, 42, 0, 1114134, 42, 0, 1114135, 42, 0, 1114136, 42, 0, 1114137, 42, 0, 1114138, 42, 0, 1114139, 42, 0, 1114140, 42, 0, 1114141, 42, 0, 1114142, 42, 0, 1114143, 42, 0, 1114144, 42, 0, 1114145, 42, 0, 1114146, 42, 0, 1114147, 42, 0, 1114148, 42, 0, 1114149, 24, 0, 1179648, 20, 0, 1179649, 42, 0, 1179650, 42, 0, 1179651, 42, 0, 1179652, 42, 0, 1179653, 42, 0, 1179654, 42, 0, 1179655, 42, 0, 1179656, 42, 0, 1179657, 42, 0, 1179658, 42, 0, 1179659, 42, 0, 1179660, 42, 0, 1179661, 42, 0, 1179662, 42, 0, 1179663, 42, 0, 1179664, 42, 0, 1179665, 42, 0, 1179666, 42, 0, 1179667, 42, 0, 1179668, 42, 0, 1179669, 42, 0, 1179670, 42, 0, 1179671, 42, 0, 1179672, 42, 0, 1179673, 42, 0, 1179674, 42, 0, 1179675, 42, 0, 1179676, 42, 0, 1179677, 42, 0, 1179678, 42, 0, 1179679, 42, 0, 1179680, 42, 0, 1179681, 42, 0, 1179682, 42, 0, 1179683, 42, 0, 1179684, 42, 0, 1179685, 24, 0, 1245184, 41, 0, 1245185, 39, 0, 1245186, 39, 0, 1245187, 39, 0, 1245188, 39, 0, 1245189, 39, 0, 1245190, 39, 0, 1245191, 39, 0, 1245192, 39, 0, 1245193, 39, 0, 1245194, 39, 0, 1245195, 39, 0, 1245196, 39, 0, 1245197, 39, 0, 1245198, 39, 0, 1245199, 39, 0, 1245200, 39, 0, 1245201, 39, 0, 1245202, 55, 0, 1245203, 39, 0, 1245204, 39, 0, 1245205, 39, 0, 1245206, 39, 0, 1245207, 39, 0, 1245208, 39, 0, 1245209, 39, 0, 1245210, 39, 0, 1245211, 39, 0, 1245212, 39, 0, 1245213, 39, 0, 1245214, 39, 0, 1245215, 39, 0, 1245216, 39, 0, 1245217, 39, 0, 1245218, 39, 0, 1245219, 39, 0, 1245220, 39, 0, 1245221, 40, 0 )

[node name="EdgeHighwayPaths" type="TileMap" parent="Enviroment"]
light_mask = -2147483646
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65537, 0, 0, 65538, 5, 0, 65539, 5, 0, 65540, 5, 0, 65541, 5, 0, 65542, 5, 0, 65543, 5, 0, 65544, 5, 0, 65545, 5, 0, 65546, 5, 0, 65547, 5, 0, 65548, 5, 0, 65549, 5, 0, 65550, 5, 0, 65551, 5, 0, 65552, 5, 0, 65553, 5, 0, 65554, 5, 0, 65555, 5, 0, 65556, 5, 0, 65557, 5, 0, 65558, 5, 0, 65559, 5, 0, 65560, 5, 0, 65561, 5, 0, 65562, 5, 0, 65563, 5, 0, 65564, 5, 0, 65565, 5, 0, 65566, 5, 0, 65567, 5, 0, 65568, 5, 0, 65569, 5, 0, 65570, 5, 0, 65571, 5, 0, 65572, 1, 0, 131073, 21, 0, 131108, 23, 0, 196609, 21, 0, 196644, 23, 0, 262145, 21, 0, 262180, 23, 0, 327681, 21, 0, 327716, 23, 0, 393217, 21, 0, 393252, 23, 0, 458753, 21, 0, 458788, 23, 0, 524289, 21, 0, 524324, 23, 0, 589825, 21, 0, 589841, 26, 0, 589842, 14, 0, 589843, 19, 0, 589860, 23, 0, 655361, 21, 0, 655377, 13, 0, 655379, 13, 0, 655396, 23, 0, 720897, 21, 0, 720913, 29, 0, 720914, 27, 0, 720915, 25, 0, 720932, 23, 0, 786433, 21, 0, 786450, 13, 0, 786468, 23, 0, 851969, 21, 0, 851986, 13, 0, 852004, 23, 0, 917505, 21, 0, 917522, 13, 0, 917540, 23, 0, 983041, 21, 0, 983058, 13, 0, 983076, 23, 0, 1048577, 21, 0, 1048594, 13, 0, 1048612, 23, 0, 1114113, 21, 0, 1114130, 13, 0, 1114148, 23, 0, 1179649, 2, 0, 1179650, 32, 0, 1179651, 32, 0, 1179652, 32, 0, 1179653, 32, 0, 1179654, 32, 0, 1179655, 32, 0, 1179656, 32, 0, 1179657, 32, 0, 1179658, 32, 0, 1179659, 32, 0, 1179660, 32, 0, 1179661, 32, 0, 1179662, 32, 0, 1179663, 32, 0, 1179664, 32, 0, 1179665, 32, 0, 1179666, 13, 0, 1179667, 32, 0, 1179668, 32, 0, 1179669, 32, 0, 1179670, 32, 0, 1179671, 32, 0, 1179672, 32, 0, 1179673, 32, 0, 1179674, 32, 0, 1179675, 32, 0, 1179676, 32, 0, 1179677, 32, 0, 1179678, 32, 0, 1179679, 32, 0, 1179680, 32, 0, 1179681, 32, 0, 1179682, 32, 0, 1179683, 32, 0, 1179684, 3, 0, 1245202, 16, 0 )

[node name="CampfireOthers" type="TileMap" parent="Enviroment"]
light_mask = 2
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
occluder_light_mask = 4
format = 1
tile_data = PoolIntArray( 1179666, 9, 0 )

[node name="Campfire" parent="." instance=ExtResource( 4 )]
x = 19
y = 11

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0, 0, 0, 1 )
